--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,15 @@ h6 {
     width: 100%;
     margin: 0;
 }
+
+.comments{
+  display: block;
+ background-color: white ;
+ position: absolute;
+ width: 100%;
+ padding: 0 0.6rem;
+ left: 0;
+ bottom: -2rem;
+ border-radius: 5px;
+ border: 1px solid rgba(128, 128, 128, 0.274);
+}
