--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,16 @@ h6 {
 }
 
 .comments{
-  display: block;
+display: flex;
+flex-direction: column;
  background-color: white ;
  position: absolute;
  width: 100%;
  padding: 0 0.6rem;
  left: 0;
- bottom: -2rem;
+ margin-top: 1rem;
  border-radius: 5px;
  border: 1px solid rgba(128, 128, 128, 0.274);
+ transition: 1s;
+ z-index: 999;
 }
